1.8.1
* WebUI/Miners: Redone
* WebUI: When a block with a wallet's unspent tx is purged from blockchain.dat, the raw tx gets fetched from the web
* WebUI/Wallet: Fixed error "Form submission canceled because the form is not connected"
* Client: enable it to work with purged blockchain.new/blockchain.dat
* bdb: -purgeall to purge all the blocks from blockchain.new (delete blockchain.dat manually)
* Client: added some BU-singnalling related stats

1.8.0 - 2017-02-06
* Segregated Witness related functionality and many other changes here and there
* Client: drop_worst_peer - do not drop peers that send new transactions
* Client: Requires new consensus lib (from bitcon-core 0.13.1)
* Client: Added "-trust" switch, with which client should be as fast as downloader
* Downloader: replaced by "client -trust" and removed from the source base
* The concept of "dust" outputs has been removed. Only the fees are important.

1.7.4
* Lib: Fixed rejecting of too big blocks
* Client: Added TX_REJECTED_RBF_100 to the rejection reasons
* WebUI/Blocks: Show lowest fee's SPB in the recently processed blocks

1.7.3 - 2016-10-18
* Client: Properly handle new blocks comming from Cornell-Falcon-Network
* Client: Fixed excessive memory usage when synchronizing large amount of blocks
* Client: Added mutex locks around reading of conn's GetBlockInProgress map
* Client: Added OneConnection.Maintanence() method, to be called every minute
* Client: Peer's BlocksReceived are now expired after 48 hours.
* Client: Parameters for droping slowest peers are now configurable via gocoin.conf

1.7.2 - 2016-09-27
* Client: drop_slowest_peer changed to drop_worst_peer - do not drop peers that send new blocks
* WebUI: "Blocks" tab shows some new statistics
* Client: Keep per-peer list of the last 500 invs, to avoid duplicate sending
* "Version" moved from "github.com/piotrnar/gocoin/lib" to "github.com/piotrnar/gocoin"
* Leave external dependencies (siphash, snappy, ripemd160) to be dealt with by "go get"