@@ -122,6 +122,7 @@ func write_html_head(w http.ResponseWriter, r *http.Request) {
 	s = strings.Replace(s, "{PAGE_TITLE}", common.CFG.WebUI.Title, 1)
 	s = strings.Replace(s, "/*_SESSION_ID_*/", "var sid = '"+sessid+"'", 1)
 	s = strings.Replace(s, "/*_AVERAGE_FEE_SPB_*/", fmt.Sprint("var avg_fee_spb = ", common.GetAverageFee()), 1)
+	s = strings.Replace(s, "/*_SERVER_MODE_*/", fmt.Sprint("var server_mode = ", common.CFG.WebUI.ServerMode), 1)
 
 	if r.URL.Path!="/" {
 		s = strings.Replace(s, "{HELPURL}", "help#" + r.URL.Path[1:], 1)
@@ -193,7 +194,9 @@ func ServerThread(iface string) {
 	http.HandleFunc("/blocks", p_blocks)
 	http.HandleFunc("/miners", p_miners)
 	http.HandleFunc("/counts", p_counts)
-	http.HandleFunc("/cfg", p_cfg)
+	if !common.CFG.WebUI.ServerMode {
+		http.HandleFunc("/cfg", p_cfg)
+	}
 	http.HandleFunc("/help", p_help)
 
 	http.HandleFunc("/txs2s.xml", xml_txs2s)
