@@ -4,6 +4,7 @@
 <script>
 /*_SESSION_ID_*/
 /*_AVERAGE_FEE_SPB_*/
+/*_SERVER_MODE_*/
 var doc_title = document.title
 var testnet = (doc_title.indexOf(" Testnet") != -1)
 </script>
