@@ -11,10 +11,8 @@ Client:
 	Corrupt block received from 91.106.149.46:8333 CheckBlock() : size limits failed high - RPC_Result:bad-blk-length
 	Undo block 450529 000000000000000000cf208f521de0424677f7a87f2f278a1042f38d159565f5 976 KB
 * Each call to common.BlockChain.DeleteBranch() shall also do DelB2G() recursively
-* Implement booostraping of the node with only the block headers and UTXO snapshot
 * Monitor: the main loop got stuck in network.Tick() function after ~50 days of uptime
 * Implement SegWit addresses handling and fetching balances from segwit addresses
-* Add "server mode" - where WebUI users cannot change config and shutdown the node
 * Show unconfirmed transactions (inside the mempool) if they have something to do with the current wallet
 * Implement "Child Pays for Parent Merged" (mining feature)
 * At slow connections it gets stuck (new blocks stop being downloaded). Go to standby and come back.
