@@ -101,6 +101,12 @@ For higher versions, it is only looking into "multisig/" sub-folder for the json
  Depending on your platform, change .txt extension to .bat or .sh, if prefer convenience over security.</td>
 </tr>
 <tr>
+<td class="cfg_name"> WebUI.ServerMode </td>
+<td class="cfg_type"> bool</td>
+<td> false</td>
+<td class="cfg_info"> Enable mode in which a client cannot do certain things (e.g. change configuration).</td>
+</tr>
+<tr>
 <td class="cfg_name"> Net.ListenTCP</td>
 <td class="cfg_type"> bool</td>
 <td> true</td>
